# cmake-hammer

./: .travis.yml  CMakeLists.txt  README.md
01_simple_executable/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
02_simple_library/: CMakeLists.txt
02_simple_library/src/: hello.cpp
03_library_and_executable/: CMakeLists.txt  Readme.md
03_library_and_executable/app/: CMakeLists.txt
03_library_and_executable/app/worldapp/: CMakeLists.txt  main.cpp
03_library_and_executable/lib/: CMakeLists.txt
03_library_and_executable/lib/include/say_world/: world.hpp
03_library_and_executable/lib/say_world/src/: CMakeLists.txt  world.cpp
cmake/: cmake_gadgets.cmake  cmake_gadgets_config.cmake.in
